# tui-demos

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_and_run.sh  clean.sh  run.sh
src/: main.cc
src/devices/: devices.cc  devices.h  dui.cc  dui.h
test_files/: device_config.toml  garden_config.toml
